Package Mapping hinzugefügt

--- a/AnnotationTest/src/main/resources/builder.properties
+++ b/AnnotationTest/src/main/resources/builder.properties
@@ -1,2 +1,4 @@
-package=de.hello.main
+package=de.alexander.brand.builder.$PACKAGE
+packageNameReplacements=org.builder=de.alexander.brand
+packageMask=de.alexander.brand
 collectionClassMap=classMap.properties
